--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -44,7 +44,8 @@
     "redis": "^4.7.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.25"
+    "typeorm": "^0.3.25",
+    "validator": "^13.15.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.10",
